cleanup font sizes (avoid letter-spacing)

--- a/scss/_font_sizes.scss
+++ b/scss/_font_sizes.scss
@@ -62,16 +62,17 @@ $font-width: (
     headline-medium: 100,
     headline-small: 100,
     title-large: 100,
-    title-medium: 100,
-    title-small: 100,
+    title-medium: 110,
+    title-small: 110,
     body-large: 100,
     body-medium: 100,
     body-small: 100,
-    label-large: 100,
-    label-medium: 100,
-    label-small: 100,
+    label-large: 110,
+    label-medium: 130,
+    label-small: 130,
 );
 
+// Please avoid letter spacing - does not work with arabic fonts
 $letter-spacing: (
     display-large: 0,
     display-medium: 0,
@@ -80,12 +81,12 @@ $letter-spacing: (
     headline-medium: 0,
     headline-small: 0,
     title-large: 0,
-    title-medium: 0.15px,
-    title-small: 0.1px,
+    title-medium: 0,
+    title-small: 0,
     body-large: 0,
     body-medium: 0,
     body-small: 0,
-    label-large: 0.1px,
-    label-medium: 0.5px,
-    label-small: 0.5px,
+    label-large: 0,
+    label-medium: 0,
+    label-small: 0,
 );
